# visual-hand-kin-inspector

./: .gitignore  CMakeLists.txt  README.md
config/: config.ini  configmk2.ini  configmk4.ini
dockerfiles/: Dockerfile
libs/: CMakeLists.txt
libs/MeshKinematics/: CMakeLists.txt
libs/MeshKinematics/include/: meshKinematics.h
libs/MeshKinematics/src/: meshKinematics.cpp
libs/MeshKinematics/test/: CMakeLists.txt  testMeshKinematics.cpp
libs/MeshSuperimp/: CMakeLists.txt
libs/MeshSuperimp/include/: meshSuperimposer.h
libs/MeshSuperimp/src/: meshSuperimposer.cpp
libs/MeshSuperimp/test/: CMakeLists.txt  testMeshSuperimposer.cpp
libs/PoseDetector/: CMakeLists.txt
libs/PoseDetector/include/: poseDetector.h
libs/PoseDetector/src/: poseDetector.cpp
libs/PoseDetector/test/: CMakeLists.txt  testPoseDetector.cpp
res/: fixedT.py  model (copy).urdf  model.urdf  modelNewHand.urdf
src/: CMakeLists.txt  main.cpp  mk2EncoderReader.cpp  mk2EncoderReader.h  mk4EncoderReader.cpp  mk4EncoderReader.h  realsenseYarp.cpp  realsenseYarp.h  visualInspector.cpp  visualInspector.h  visualKinInspector.cpp  visualKinInspector.h
src/MeshKinematics/: CMakeLists.txt
src/MeshKinematics/include/: meshKinematics.h
src/MeshKinematics/src/: meshKinematics.cpp
src/PoseDetector/: CMakeLists.txt
src/PoseDetector/include/: poseDetector.h
src/PoseDetector/src/: poseDetector.cpp
